--- a/client/package.json
+++ b/client/package.json
@@ -6,23 +6,23 @@
     "start": "next start"
   },
   "dependencies": {
-    "@metamask/providers": "^10.2.1",
-    "ethers": "^5.7.2",
-    "next": "latest",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hot-toast": "^2.4.0",
-    "react-icons": "^4.7.1",
-    "react-scroll": "^1.8.8"
+    "@metamask/providers": "^11.1.0",
+    "daisyui": "^3.2.1",
+    "ethers": "^6.6.4",
+    "next": "^13.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.2",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
-    "@types/node": "18.11.3",
-    "@types/react": "18.0.21",
-    "@types/react-dom": "18.0.6",
-    "@types/react-scroll": "^1.8.5",
+    "@types/node": "20.4.2",
+    "@types/react": "18.2.15",
+    "@types/react-dom": "18.2.7",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1",
-    "typescript": "4.8.4"
+    "typescript": "5.1.6"
   }
 }
