--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/node": "20.4.2",
